# CVE-2019-11932

./: Makefile  README.md  app-debug.apk  egif_lib.c  exploit.c
MyApplication2/: build.gradle  local.properties
MyApplication2/app/: CMakeLists.txt  build.gradle
MyApplication2/app/src/main/: AndroidManifest.xml
MyApplication2/app/src/main/cpp/gif/: egif_lib.c  exploit.c  gif_lib.h
MyApplication2/app/src/main/java/com/example/myapplication/: MainActivity.java
MyApplication2/app/src/main/res/layout/: activity_main.xml
MyApplication2/gradle/wrapper/: gradle-wrapper.properties
